c_prototypes.h

void koota_land_real16(void * invec, void * inoutvec, size_t len);
void koota_lor_real16(void * invec, void * inoutvec, size_t len);
void koota_lxor_real16(void * invec, void * inoutvec, size_t len);
void koota_min_complex4(void * invec, void * inoutvec, size_t len);
void koota_max_complex4(void * invec, void * inoutvec, size_t len);
void koota_sum_complex4(void * invec, void * inoutvec, size_t len);
void koota_prod_complex4(void * invec, void * inoutvec, size_t len);
void koota_band_complex4(void * invec, void * inoutvec, size_t len);
void koota_bor_complex4(void * invec, void * inoutvec, size_t len);
void koota_bxor_complex4(void * invec, void * inoutvec, size_t len);
void koota_land_complex4(void * invec, void * inoutvec, size_t len);
void koota_lor_complex4(void * invec, void * inoutvec, size_t len);
void koota_lxor_complex4(void * invec, void * inoutvec, size_t len);
void koota_min_complex8(void * invec, void * inoutvec, size_t len);
void koota_max_complex8(void * invec, void * inoutvec, size_t len);
void koota_sum_complex8(void * invec, void * inoutvec, size_t len);
void koota_prod_complex8(void * invec, void * inoutvec, size_t len);
void koota_band_complex8(void * invec, void * inoutvec, size_t len);
void koota_bor_complex8(void * invec, void * inoutvec, size_t len);